Name updated, expertise updated , photo attached

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Prakriti Associate | IT Solutions & Cloud Services</title>
+    <title>True Infra Labs | IT Solutions & Cloud Services</title>
     <meta name="description" content="Prakriti Associate delivers comprehensive IT services including server management, cloud automation, and custom development solutions for businesses." />
     <meta name="author" content="Prakriti Associate" />
     <meta name="keywords" content="IT solutions, cloud services, server management, automation, web development, Linux, Windows, SEO" />
