--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>True Infra Labs | IT Solutions & Cloud Services</title>
-    <meta name="description" content="Prakriti Associate delivers comprehensive IT services including server management, cloud automation, and custom development solutions for businesses." />
-    <meta name="author" content="Prakriti Associate" />
+    <meta name="description" content="True Infra Labs delivers comprehensive IT services including server management, cloud automation, and custom development solutions for businesses." />
+    <meta name="author" content="True Infra Labs" />
     <meta name="keywords" content="IT solutions, cloud services, server management, automation, web development, Linux, Windows, SEO" />
 
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 
-    <meta property="og:title" content="Prakriti Associate | IT Solutions & Cloud Services" />
+    <meta property="og:title" content="True Infra Labs | IT Solutions & Cloud Services" />
     <meta property="og:description" content="Transform your business with smart technology. Server solutions, cloud automation, and custom development." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/favicon.svg" />
+    <meta property="og:image" content="/TrueInfraLabs.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@PrakritiAssoc" />
+    <meta name="twitter:site" content="@TrueInfraLabs" />
     
     <link rel="canonical" href="https://prakriti-associate.com" />
   </head>
